--- a/Debug/makefile
+++ b/Debug/makefile
@@ -51,7 +51,7 @@ all: rpi_tcp_listener
 rpi_tcp_listener: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: Cross G++ Linker'
-	arm-linux-gnueabihf-g++ -lpthread -o "rpi_tcp_listener" $(OBJS) $(USER_OBJS) $(LIBS)
+	arm-linux-gnueabihf-g++ -lao -lmpg123 -lpthread -o "rpi_tcp_listener" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
