Minor fixes, change in command TCP_PLAY, added bash scripts for autostart

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -45,19 +45,19 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: rpi_tcp_listener
+all: audio_app
 
 # Tool invocations
-rpi_tcp_listener: $(OBJS) $(USER_OBJS)
+audio_app: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: Cross G++ Linker'
-	arm-linux-gnueabihf-g++ -lao -lmpg123 -lpthread -o "rpi_tcp_listener" $(OBJS) $(USER_OBJS) $(LIBS)
+	arm-linux-gnueabihf-g++ -lao -lmpg123 -lpthread -o "audio_app" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(C++_DEPS)$(OBJS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) rpi_tcp_listener
+	-$(RM) $(C++_DEPS)$(OBJS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) audio_app
 	-@echo ' '
 
 .PHONY: all clean dependents
