--- a/audio_app.cfg
+++ b/audio_app.cfg
@@ -1,6 +1,6 @@
 # Configure IP
-ip_config { ip: 192.168.0.100, mask: 255:255.0.0, port: 6969}
+ip_config { ip: 192.168.125.100, mask: 255.255.0.0, gateway:192.168.125.1, port: 2055}
 
 # Configure sound files
 #NOTE: no spaces allowed in file name!
-sounds_config {sound:file1|file2}
+sounds_config {sound:S030secL|S030secR|S150secL|S150secR|S11025spsL|S11025spsR|S22050spsL|S22050spsR|S44100spsL|S44100spsR}
