Add cmake messages to indicate unit test enable/dissable. Update documentation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,9 @@ add_subdirectory(rpi_tcp_listener_app)
 option(TEST "Build all tests" OFF)
 
 if (TEST)
+	message (STATUS "Unit tests enabled")
 	enable_testing()
 	add_subdirectory(ext/gtest-1.7.0)
+else ()
+	message (STATUS "Unit tests disabled")
 endif()
