Connection class refactor

--- a/src/app_config/CMakeLists.txt
+++ b/src/app_config/CMakeLists.txt
@@ -3,3 +3,6 @@ project (app_config)
 add_library (app_config INTERFACE)
 
 target_include_directories (app_config INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+
+target_sources (app_config INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/app_config/app_constants.h)
+
