Add time component UT testing

--- a/src/time/CMakeLists.txt
+++ b/src/time/CMakeLists.txt
@@ -7,3 +7,6 @@ add_library (time
 target_include_directories (time PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_link_libraries (time PRIVATE app_utilities)
+
+# Unit tests section
+include (testing.cmake)
