--- a/src/config_manager/CMakeLists.txt
+++ b/src/config_manager/CMakeLists.txt
@@ -8,4 +8,4 @@ add_library (config_manager
 
 target_include_directories (config_manager PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries (config_manager PRIVATE app_utilities app_config)
+target_link_libraries (config_manager PRIVATE utilities app_config)
