--- a/src/rpi_tcp_listener_app/CMakeLists.txt
+++ b/src/rpi_tcp_listener_app/CMakeLists.txt
@@ -2,4 +2,11 @@ project (rpi_tcp_listener)
 
 add_executable(rpi_tcp_listener rpi_tcp_listener.cpp)
 
-target_link_libraries (rpi_tcp_listener app_utilities zip mp3 app_config tcp_connection communication config_manager)
+target_link_libraries (rpi_tcp_listener
+    utilities
+    zip
+    mp3
+    app_config
+    tcp_connection
+    communication
+    config_manager)
