--- a/src/utilities/CMakeLists.txt
+++ b/src/utilities/CMakeLists.txt
@@ -1,15 +1,17 @@
-project (app_utilities)
+project (utilities)
 
 find_library(PTHREAD_LIB pthread)
 
 # Create a library called "utilites" which includes the source files.
-add_library (app_utilities
+add_library (utilities
 	utilities/logger.cpp
 	utilities/logger.h
+	utilities/time.cpp
+	utilities/time.h
 	utilities/message_queue.h
 	utilities/thread_wrapper.h
 )
 
-target_include_directories (app_utilities PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories (utilities PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries (app_utilities PRIVATE "${PTHREAD_LIB}")
+target_link_libraries (utilities PRIVATE "${PTHREAD_LIB}")
