--- a/src/tcp_connection/test/CMakeLists.txt
+++ b/src/tcp_connection/test/CMakeLists.txt
@@ -2,7 +2,7 @@ add_executable(tcp_connection_test
     tcp_connection_test.cpp)
 
 target_link_libraries(tcp_connection_test
-    app_utilities
+    utilities
     tcp_connection
     gtest
     gtest_main)
