--- a/src/communication/CMakeLists.txt
+++ b/src/communication/CMakeLists.txt
@@ -2,12 +2,12 @@ project (communication)
 
 add_library (communication 
 	communication/communication.cpp
-	communication/communication.h)
+	communication/communication.h
+	communication/msg_parser.cpp
+	communication/msg_parser.h)
 
 target_include_directories (communication PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_link_libraries (communication
-    #PRIVATE utilities
-    PUBLIC mp3
-    msg_parser
-    config_manager)
+	PUBLIC mp3
+	config_manager)
