--- a/src/utilities/CMakeLists.txt
+++ b/src/utilities/CMakeLists.txt
@@ -10,6 +10,8 @@ add_library (utilities
 	utilities/time.h
 	utilities/message_queue.h
 	utilities/thread_wrapper.h
+	utilities/zip.cpp
+	utilities/zip.h
 )
 
 target_include_directories (utilities PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
