--- a/src/config_manager/CMakeLists.txt
+++ b/src/config_manager/CMakeLists.txt
@@ -2,10 +2,8 @@ project (config_manager)
 
 add_library (config_manager 
 	config_manager/config_manager.cpp
-	config_manager/config_manager.h
-	config_manager/config_parser.cpp
-	config_manager/config_parser.h)
+	config_manager/config_manager.h)
 
 target_include_directories (config_manager PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries (config_manager PRIVATE utilities app_config)
+target_link_libraries (config_manager PRIVATE pugixml utilities app_config)
