--- a/src/utilities/CMakeLists.txt
+++ b/src/utilities/CMakeLists.txt
@@ -1,7 +1,5 @@
 project (utilities)
 
-find_library(PTHREAD_LIB pthread)
-
 # Create a library called "utilites" which includes the source files.
 add_library (utilities
 	utilities/logger.cpp
@@ -9,11 +7,10 @@ add_library (utilities
 	utilities/time.cpp
 	utilities/time.h
 	utilities/message_queue.h
-	utilities/thread_wrapper.h
 	utilities/zip.cpp
 	utilities/zip.h
 )
 
 target_include_directories (utilities PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries (utilities PRIVATE "${PTHREAD_LIB}")
+target_link_libraries (utilities)
