Mock system set time, UT does not need root privilages. Update mp3player, detect wrong file. Update mp3player UT to cover all cases.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 project(rpi_tcp_listener_project VERSION 3.0 LANGUAGES CXX)
 
-add_definitions(-g -o0 -Wall -Wextra -Werror -pedantic -std=gnu++11)
+add_definitions(-Wall -Wextra -Werror -pedantic -std=gnu++11)
 
 add_subdirectory(app_rpi_tcp_listener)
 add_subdirectory(app_config)
