--- a/src/communication/test/CMakeLists.txt
+++ b/src/communication/test/CMakeLists.txt
@@ -1,9 +1,2 @@
-add_executable(msg_parser_test
-	msg_parser_test.cpp)
-
-target_link_libraries(msg_parser_test
-	PRIVATE communication
-	gmock
-	gtest_main)
-
-add_test(msg_parser_test msg_parser_test)
+include (msg_parser_test.cmake)
+include (communication_test.cmake)
